apps/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett:0.22.2238
          ports:
            - containerPort: 9117
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config-pvc
