apps/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: apps
spec:
  selector:
    app: jackett
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9117
  type: ClusterIP
